--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -63,3 +63,30 @@ h1{
     text-align: center;
     margin: 0 auto;
 }
+
+/*Form styles*/
+
+#tester-initials{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+}
+
+#tester-initials input{
+    margin: .5rem 0;
+    border: none;
+    border-radius: 2rem;
+    height: 1.5rem;
+    text-align: center;
+}
+
+#tester-initials input:focus{
+    background-color: rgb(129, 205, 228);
+}
+
+#tester-initials button{
+    border: none;
+    border-radius: .5rem;
+    padding: 1rem;
+}
