--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,3 +90,35 @@ h1{
     border-radius: .5rem;
     padding: 1rem;
 }
+
+/*Display score*/
+
+.score-holder{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 0 .5rem;
+}
+
+.scores{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 0 .5rem;
+}
+
+.center{
+    text-align: center;
+}
+
+.center-a{
+    text-decoration: none;
+    position: relative;
+    left: 50%;
+    margin-left: -22px;
+}
+
+.tester-name{
+    margin-right: 2rem;
+}
