--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,6 +62,7 @@ h1{
 .intro{
     text-align: center;
     margin: 0 auto;
+    padding: 0.5rem;
 }
 
 /*Form styles*/
@@ -121,4 +122,34 @@ h1{
 
 .tester-name{
     margin-right: 2rem;
+}
+
+/* buttons and pointers */
+
+button{
+    background-image: linear-gradient(rgb(21, 79, 187), rgb(0, 128, 117));
+    background-size: -10 50px;
+    padding: .5rem;
+    border-radius: 0.25rem;
+    border: solid var(--accent-color) 2px;
+    font-size: var(--primary-font-size);
+    font-weight: 700;
+}
+
+button:hover{
+    background-image: linear-gradient(rgb(45, 95, 187), rgb(10, 173, 160));
+    border: solid rgb(7, 157, 202) 2px;
+}
+
+.answers p, h3{
+    cursor: pointer;
+}
+
+span{
+    font-weight: 900;
+}
+
+a{
+    margin-top: 1rem;
+    color: black;
 }
