--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,12 +30,13 @@ h1{
     width: 65%;
     min-width: 345px;
     min-height: 400px;
-    margin: 0;
+    margin: 0 auto;
     position: absolute;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    padding: 1rem;
 }
 
 .header{
@@ -46,8 +47,9 @@ h1{
 }
 
 .quiz-body{
-    margin: 0 auto;
+    
     width: fit-content;
+    
 }
 
 .question{
